--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,8 +4,8 @@
 # Odoo Connection
 ODOO_URL=http://localhost:8069
 ODOO_DB=quimibond
-ODOO_USER=admin
-ODOO_PASSWORD=tu_password_seguro
+ODOO_USER=jose.mizrahi@quimibond.com
+ODOO_PASSWORD=1eab31ba65706701e5912ec026e40ca096d4fc99
 
 # API Configuration
 API_HOST=0.0.0.0
